# ARC

./: CMakeLists.txt  LICENSE  README.md  build.bash  build_tests.bash
benchmarks/compilation/9/: CMakeLists.txt  graph.ixx.arc  main.cpp
benchmarks/compilation/9/nodes/: node1.impl.ixx  node1.ixx  node2.impl.ixx  node2.ixx  node3.impl.ixx  node3.ixx  node4.impl.ixx  node4.ixx  node5.impl.ixx  node5.ixx  node6.impl.ixx  node6.ixx  node7.impl.ixx  node7.ixx  node8.impl.ixx  node8.ixx  node9.impl.ixx  node9.ixx
benchmarks/compilation/9/traits/: trait1.ixx.arc  trait2.ixx.arc  trait3.ixx.arc  trait4.ixx.arc  trait5.ixx.arc  trait6.ixx.arc  trait7.ixx.arc  trait8.ixx.arc  trait9.ixx.arc
benchmarks/compilation/99/: CMakeLists.txt  README.md  graph.ixx.arc  main.cpp
benchmarks/compilation/99/nodes/: node1.impl.ixx  node1.ixx  node10.impl.ixx  node10.ixx  node11.impl.ixx  node11.ixx  node12.impl.ixx  node12.ixx  node13.impl.ixx  node13.ixx  node14.impl.ixx  node14.ixx  node15.impl.ixx  node15.ixx  node16.impl.ixx  node16.ixx  node17.impl.ixx  node17.ixx  node18.impl.ixx  node18.ixx  node19.impl.ixx  node19.ixx  node2.impl.ixx  node2.ixx  node20.impl.ixx  node20.ixx  node21.impl.ixx  node21.ixx  node22.impl.ixx  node22.ixx  node23.impl.ixx  node23.ixx  node24.impl.ixx  node24.ixx  node25.impl.ixx  node25.ixx  node26.impl.ixx  node26.ixx  node27.impl.ixx  node27.ixx  (+158 more)
benchmarks/compilation/99/traits/: trait1.ixx.arc  trait10.ixx.arc  trait11.ixx.arc  trait12.ixx.arc  trait13.ixx.arc  trait14.ixx.arc  trait15.ixx.arc  trait16.ixx.arc  trait17.ixx.arc  trait18.ixx.arc  trait19.ixx.arc  trait2.ixx.arc  trait20.ixx.arc  trait21.ixx.arc  trait22.ixx.arc  trait23.ixx.arc  trait24.ixx.arc  trait25.ixx.arc  trait26.ixx.arc  trait27.ixx.arc  trait28.ixx.arc  trait29.ixx.arc  trait3.ixx.arc  trait30.ixx.arc  trait31.ixx.arc  trait32.ixx.arc  trait33.ixx.arc  trait34.ixx.arc  trait35.ixx.arc  trait36.ixx.arc  trait37.ixx.arc  trait38.ixx.arc  trait39.ixx.arc  trait4.ixx.arc  trait40.ixx.arc  trait41.ixx.arc  trait42.ixx.arc  trait43.ixx.arc  trait44.ixx.arc  trait45.ixx.arc  (+59 more)
benchmarks/compilation/99_seq/: CMakeLists.txt  graph.ixx.arc  main.cpp
benchmarks/compilation/99_seq/nodes/: node1.ixx  node10.ixx  node11.ixx  node12.ixx  node13.ixx  node14.ixx  node15.ixx  node16.ixx  node17.ixx  node18.ixx  node19.ixx  node2.ixx  node20.ixx  node21.ixx  node22.ixx  node23.ixx  node24.ixx  node25.ixx  node26.ixx  node27.ixx  node28.ixx  node29.ixx  node3.ixx  node30.ixx  node31.ixx  node32.ixx  node33.ixx  node34.ixx  node35.ixx  node36.ixx  node37.ixx  node38.ixx  node39.ixx  node4.ixx  node40.ixx  node41.ixx  node42.ixx  node43.ixx  node44.ixx  node45.ixx  (+59 more)
benchmarks/compilation/99_seq/traits/: trait1.ixx.arc  trait10.ixx.arc  trait11.ixx.arc  trait12.ixx.arc  trait13.ixx.arc  trait14.ixx.arc  trait15.ixx.arc  trait16.ixx.arc  trait17.ixx.arc  trait18.ixx.arc  trait19.ixx.arc  trait2.ixx.arc  trait20.ixx.arc  trait21.ixx.arc  trait22.ixx.arc  trait23.ixx.arc  trait24.ixx.arc  trait25.ixx.arc  trait26.ixx.arc  trait27.ixx.arc  trait28.ixx.arc  trait29.ixx.arc  trait3.ixx.arc  trait30.ixx.arc  trait31.ixx.arc  trait32.ixx.arc  trait33.ixx.arc  trait34.ixx.arc  trait35.ixx.arc  trait36.ixx.arc  trait37.ixx.arc  trait38.ixx.arc  trait39.ixx.arc  trait4.ixx.arc  trait40.ixx.arc  trait41.ixx.arc  trait42.ixx.arc  trait43.ixx.arc  trait44.ixx.arc  trait45.ixx.arc  (+59 more)
examples/animals/: CMakeLists.txt  cow.ixx  farm.ixx.arc  farmer.ixx  main.cpp  sheep.ixx  traits.ixx.arc
examples/animals_virtual/: CMakeLists.txt  animal.ixx  animal_facade.ixx  cow.ixx  farm.ixx.arc  farmer.ixx  fox.ixx  goat.ixx  main.cpp  sheep.ixx  traits.ixx.arc
examples/filesystem/: CMakeLists.txt  README.md  clusters.ixx.arc  disk_repl.cpp  domain.ixx.arc  entry.ixx  graphs.ixx  in_memory_repl.cpp  main.cpp  traits.ixx.arc
examples/filesystem/nodes/: disk_storage.ixx  filesystem.ixx  memory_storage.ixx  path_ops.ixx  repl.ixx
examples/filesystem/nodes/impl/: disk_storage.cpp  filesystem.impl.ixx  memory_storage.cpp  memory_storage.load.ixx  path_ops.cpp  repl.impl.ixx
examples/filesystem/tests/: mocks.ixx  test_cluster.cpp  test_disk_storage.cpp  test_domain.cpp  test_filesystem.cpp  test_memory_storage.cpp  test_path_ops.cpp
examples/greet/: CMakeLists.txt  alice.ixx  bob.ixx  forum.ixx.arc  main.cpp  traits.ixx.arc
generator_lib/: CMakeLists.txt  arc.lark  arc_header.lark  arc_module.lark  generate.py  template.hxx.jinja  template.ixx.jinja  template.jinja
lib/: CMakeLists.txt
lib/include/arc/: adapt.hpp  alias.hpp  arc.hpp  args.hpp  box.hpp  circular_buffer.hpp  cluster.hpp  collection.hpp  combine.hpp  compiler.hpp  context.hpp  context_fwd.hpp  core.hpp  count.hpp  defer.hpp  depends.hpp  detached.hpp  empty_types.hpp  ensure.hpp  environment.hpp  factory.hpp  finalise.hpp  function.hpp  global_context.hpp  global_graph.hpp  global_trait.hpp  graph.hpp  group.hpp  key.hpp  lazy.hpp  link.hpp  map_info.hpp  mock.hpp  mock_fwd.hpp  narrow.hpp  no_trait.hpp  node.hpp  node_fwd.hpp  peer_node.hpp  repeater.hpp  (+15 more)
lib/include/arc/detail/: as_ref.hpp  cast.hpp  compress.hpp  concepts.hpp  select.hpp  type_at.hpp  type_name.hpp  with_index.hpp
lib/include/arc/manual/: cluster.hpp  trait.hpp
lib/include/arc/traits/: dynamic_node.hpp  dynamic_node.hxx.arc  peer.hxx.arc  (+3 more)
lib/modules/: arc.ixx
lib/pch/: CMakeLists.txt
tests/: CMakeLists.txt  config.cmake  test_abc_headers.cpp  test_abc_module.cpp  test_circular_buffer.cpp  test_collection.cpp  test_combine.cpp  test_embedded_headers.cpp  test_embedded_modules.cpp  test_global.cpp  test_group.cpp  test_joined_trait.cpp  test_lazy.cpp  test_mem_ptr.cpp  test_mock.cpp  test_node_count.cpp  test_null_trait.cpp  test_spy.cpp  test_union.cpp  test_virtual.cpp
tests/abc/: CMakeLists.txt
tests/test_domain/: domain.ixx.arc
tests/test_repeater/: cluster.ixx.arc  main.cpp  test_node.ixx  traits.ixx.arc
tests/test_thread/: cluster.ixx.arc  global_scheduler.ixx  poster.cpp  poster.ixx  test_collection.cpp  test_node.ixx  test_thread.cpp  test_union.cpp  traits.ixx.arc
(+31 files in other folders)
